umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_bk+4.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["Bk#c+4#u7"] :bonds [] :charge 4 :spin "#u7 #s8"}} :counts {:success true :output {:atoms ["Bk#c+4#n3#u"] :bonds [] :charge 4 :spin "#u1 #s2"}}}
