umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_ca+2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Ca#c+2"] :bonds []} :success true}
  :counts {:output {:atoms ["Ca#c+2"] :bonds []} :success true}}
